# pytest-failed

./: .gitignore  pyproject.toml
src/pytest_failed/: plugin.py
